@@ -21,7 +21,9 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>1.8</java.version>
+    <java.version>11</java.version>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
     <springfox-version>2.7.0</springfox-version>
     <!--Sonar Pros: starts-->
     <sonar-maven-plugin.version>3.6.0.1398</sonar-maven-plugin.version>
@@ -38,7 +40,7 @@
     <commons-cli.version>1.3.1</commons-cli.version>
     <spring-boot-admin-starter-client.version>1.4.5</spring-boot-admin-starter-client.version>
     <hamcrest-all.version>1.3</hamcrest-all.version>
-    <lombok.version>1.16.20</lombok.version>
+    <lombok.version>1.18.2</lombok.version>
   </properties>
 
   <dependencies>
@@ -187,6 +189,15 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
+        <configuration>
+          <source>${maven.compiler.source}</source>
+          <target>${maven.compiler.target}</target>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
@@ -196,6 +207,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <!--Extra memory to prevent jvm crash during heavy Integration/unit test with newer lombok and jdk8-->
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
           <classpathDependencyExcludes>
             <classpathDependencyExclude>org.springframework.cloud:spring-cloud-context</classpathDependencyExclude>
           </classpathDependencyExcludes>
